--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/15613672/32cefb0c-23fa-11e6-986f-19b524f98c61.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
-      <a href="http://geckolinux.github.io/#download" class="btn">Download / SuseStudio TestDrive</a>
+
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       <a href="https://groups.google.com/d/forum/geckolinux" class="btn">Forum</a>
@@ -114,10 +114,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.2 with its per
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/">Sourceforge directory listing</a>.
-	</p>
-	<p>
-		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/">Sourceforge directory listing</a>.
 	</p>
 </h5>
 
@@ -139,8 +136,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Cinnamon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_Cinnamon.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_Cinnamon.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -148,8 +145,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> XFCE
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_XFCE.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_XFCE.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -157,17 +154,17 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Gnome
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_Gnome.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_Gnome.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Plasma Stable
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_Plasma_Stable.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+        <figcaption>GeckoLinux <em>Static</em> </br> Plasma
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_Plasma.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -177,17 +174,17 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> Mate
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_Mate.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_Mate.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_Budgie10.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+        <figcaption>GeckoLinux <em>Static</em> </br> Budgie <em>[UNAVAILABLE]</em>
+		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -195,8 +192,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> LXQt
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_LXQt.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_LXQt.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -204,8 +201,8 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> "Barebones"
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/422.170302/GeckoLinux_BareBones.x86_64-422.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=422.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_BareBones.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -234,7 +231,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Cinnamon
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_Cinnamon.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-cinnamon/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -243,7 +240,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> XFCE
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_XFCE.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-xfce/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -252,7 +249,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Gnome
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_Gnome.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-gnome/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -261,7 +258,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Plasma
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_Plasma.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-plasma/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -272,7 +269,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Mate
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_Mate.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-mate/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -281,7 +278,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Budgie
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_Budgie10.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-budgie10/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -290,7 +287,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> LXQt
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_LXQt.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-lxqt/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -299,7 +296,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> "Barebones"
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.170302/GeckoLinux_ROLLING_BareBones.x86_64-999.170302.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-rolling-barebones--2/start_testdrive?version=999.170302.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+
         </figcaption>
       </figure>
     </div>
@@ -317,9 +314,6 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
 		<a href="https://sourceforge.net/projects/geckolinux/files/NEXT/">Sourceforge directory listing</a>.
 	</p>
-	<p>
-		<strong>Notice: </strong>The live system password is <code>linux</code> for normal and root users.
-	</p>
 </h5>
 
 <div class="row">
@@ -328,8 +322,8 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_Plasma_NEXT.x86_64-422.170303.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-next/start_testdrive?version=422.170303.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Plasma.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
         </figcaption>
       </figure>
     </div>
