--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Budgie <em>[UNAVAILABLE]</em>
+	    <figcaption></br> </br>  <em>[UNAVAILABLE]</em>
 		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
