--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-
+	<li><strong>2018-01-05 : </strong></strong>all <em>Static</em> editions and Plasma <em>NEXT</em> edition updated to 423.180105.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/kv0OOBXOJvA">release notes</a>)</li>	
 <li><strong>2017-03-03 : </strong></strong>Plasma <em>NEXT</em> edition 422.170303.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/oIXA5-VlRBw">release notes</a>)</li>	
 <li><strong>2017-03-03 : </strong></strong>all Rolling editions 999.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/sJlfvxmmy1U">release notes</a>)</li>
 <li><strong>2017-03-03 : </strong></strong>all Static editions 422.170302.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/qNFY9GGk_fc">release notes</a>)</li>	
