--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux <em>Static</em> </br> XFCE
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/GeckoLinux_STATIC_XFCE.x86_64-423.180105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="#"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
