--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h1 class="project-name">GeckoLinux</h1>
       <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
 
+      <a href="#download" class="btn">Download</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
       <a href="https://github.com/geckolinux/geckolinux-project/issues" class="btn">Bugs</a>
       <a href="https://groups.google.com/d/forum/geckolinux" class="btn">Forum</a>
@@ -103,7 +104,7 @@ GeckoLinux <em>Static</em> editions are based on openSUSE Leap 42.2 with its per
 <h5>
 	<p>
 		<strong>Notice: </strong>Please verify your download checksums by clicking the &nbsp; <strong><em>i</em></strong> &nbsp; icon next to your download in the 
-		<a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180105/">Sourceforge directory listing</a>.
+		<a href="https://sourceforge.net/projects/geckolinux/files/Static/423.180107/">Sourceforge directory listing</a>.
 	</p>
 </h5>
 
