Add search engine tags for better visibility :-)
Thank you for this amazing project !

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>GeckoLinux - Linux for Detail Oriented Geckos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop. It is available in Static (based on openSUSE Leap) and Rolling (based on openSUSE Tumbleweed) editions">
+    <meta name="keywords" content="geckolinux, opensuse based distro, opensuse based distribution">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">  
     <link rel="stylesheet" href="slideshow.css">
     <script src="slideshow.js"></script>
     
