--- a/index.html
+++ b/index.html
@@ -58,16 +58,9 @@
 
 
 
-<h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
-<ul>
-
-<li><strong>2018-01-07 : </strong></strong>all <em>Static</em> editions and Plasma <em>NEXT</em> edition updated to 423.180107.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/hOGvnxnSkQc">release notes</a>)</li>	
-<li><strong>2018-01-05 : </strong></strong>all <em>Static</em> editions and Plasma <em>NEXT</em> edition updated to 423.180105.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/kv0OOBXOJvA">release notes</a>)</li>	
-<li><strong>2016-06-27 : </strong></strong>all Static editions 421.160627.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/bcz0cgN4NL8">release notes</a>)</li>
-<li><strong>2016-06-24 : </strong></strong>all Rolling editions 999.160623.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/pUVRCESpQM8">release notes</a>)</li>
-
-</ul>
-
+<h4><a id="releases" class="anchor" href="#releases" aria-hidden="true"><span class="octicon octicon-link"></span></a>Releases</h4>
+<p>Please read the <a href="https://github.com/geckolinux/geckolinux-project/releases">release notes on GitHub</a>.</p>
+	
 <h4><a id="geckolinux-features" class="anchor" href="#geckolinux-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>GeckoLinux Features</h4>
 
 <ul>
