--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 
 <h3><a id="donate" class="anchor" href="#donate" aria-hidden="true"><span class="octicon octicon-link"></span></a>Donate</h3>
 
-<p>Since some users have approached me about donating to the project, I have added the following PayPal Donations button:</p>
+<p>Since some users have approached me about donating to the project, I have added this PayPal Donate button:</p>
 
 <p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
