--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <li><a href="https://user-images.githubusercontent.com/2692138/41168252-0a7369ae-6b0b-11e8-9b60-fa2bbe33622b.png"><img src="https://user-images.githubusercontent.com/2692138/41168252-0a7369ae-6b0b-11e8-9b60-fa2bbe33622b.png" title="GeckoLinux Plasma edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://user-images.githubusercontent.com/2692138/91662793-47e8cb00-eaaa-11ea-96c2-2b06738d00ed.png"><img src="https://user-images.githubusercontent.com/2692138/91662793-47e8cb00-eaaa-11ea-96c2-2b06738d00ed.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>	
-	
+    <li><a href="https://user-images.githubusercontent.com/2692138/91384189-8e60d000-e7f3-11ea-936c-d7730380b442.png"><img src="https://user-images.githubusercontent.com/2692138/91384189-8e60d000-e7f3-11ea-936c-d7730380b442.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>		
 </ul>
 
 <style>
