--- a/index.html
+++ b/index.html
@@ -291,16 +291,32 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux Plasma <em>NEXT</em> </br>
+        <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
+        <figcaption>GeckoLinux <em>NEXT</em> Plasma</br>
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Plasma.x86_64-152.200726.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
     </div>
 
-    <div class="col"> &nbsp; </div>
-    <div class="col"> &nbsp; </div>
+    <div class="col"> &nbsp; 
+      <figure>
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
+        <figcaption>GeckoLinux <em>NEXT</em> Pantheon</br>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/####/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
+        </figcaption>
+      </figure>
+    </div>
+    <div class="col"> &nbsp;
+      <figure>
+        <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
+        <figcaption>GeckoLinux <em>NEXT</em> Budgie</br>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/####/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
+        </figcaption>
+      </figure>
+    </div>
     <div class="col"> &nbsp; </div>
 
 </div>
