--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       </figure>
     </div>
 
-    <div class="col"> &nbsp; 
+    <div class="col"> 
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux <em>NEXT</em> Pantheon</br>
@@ -308,7 +308,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
         </figcaption>
       </figure>
     </div>
-    <div class="col"> &nbsp;
+    <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
         <figcaption>GeckoLinux <em>NEXT</em> Budgie</br>
