--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
 	</p>
 </h5>
 
+
 <div class="row">
     <div class="col">
       <figure>
@@ -229,6 +230,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
+</div>
+<div class="row">
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
@@ -238,8 +241,6 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
-</div>
-<div class="row">
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
@@ -258,6 +259,26 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
+</div>
+<div class="row">
+    <div class="col">
+      <figure>
+        <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
+        <figcaption>GeckoLinux <em>Rolling</em> </br> Budgie
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/###/###/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
+        </figcaption>
+      </figure>
+    </div>
+    <div class="col">
+      <figure>
+        <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
+        <figcaption>GeckoLinux <em>Rolling</em> </br> Pantheon
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/###/###/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+
+        </figcaption>
+      </figure>
+    </div>
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
@@ -267,11 +288,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
-    <div class="col">
-
-    </div>
 </div>
-
 
 <h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
 <p>
