--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
-        <figcaption>GeckoLinux <em>Rolling-OBS</em> </br> Pantheon
+        <figcaption style="font-size: 0.875em;">GeckoLinux <em>Rolling-OBS</em> </br> Pantheon
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/###/###/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
