--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Budgie
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/###/###/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.200830/GeckoLinux_ROLLING_Budgie.x86_64-999.200830.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
@@ -274,7 +274,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
         <figcaption style="font-size: 65%;">GeckoLinux <em>Rolling-OBS</em> </br> Pantheon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/###/###/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.200830/GeckoLinux_ROLLING-OBS_Pantheon.x86_64-999.200830.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
@@ -320,7 +320,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
         <figcaption>GeckoLinux <em>NEXT</em> Pantheon</br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/####/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Pantheon.x86_64-152.200830.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
@@ -329,7 +329,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
         <figcaption>GeckoLinux <em>NEXT</em> Budgie</br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/####/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Budgie.x86_64-152.200830.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
