--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
-        <figcaption>GeckoLinux <em>STATIC</em> Budgie</br>
+        <figcaption>GeckoLinux <em>STATIC</em> Budgie
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/152.201210/GeckoLinux_STATIC_Budgie.x86_64-152.201210.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
