--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>GeckoLinux - Linux for Detail Oriented Geckos</title>
+    <title>GeckoLinux - Linux for Detail-Oriented Geckos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="GeckoLinux is a Linux spin based on the openSUSE distribution, with a focus on polish and out-of-the-box usability on the desktop. It is available in Static (based on openSUSE Leap) and Rolling (based on openSUSE Tumbleweed) editions">
     <meta name="keywords" content="geckolinux, opensuse based distro, opensuse based distribution">
