--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="page-header">
       <h2 class="project-tagline"><img src="https://cloud.githubusercontent.com/assets/2692138/15613672/32cefb0c-23fa-11e6-986f-19b524f98c61.png" alt="Gecko Linux"></h2>
       <h1 class="project-name">GeckoLinux</h1>
-      <h2 class="project-tagline">Linux for Detail Oriented Geckos</h2>
+      <h2 class="project-tagline">Linux for Detail-Oriented Geckos</h2>
 
       <a href="#download" class="btn">Download</a>
       <a href="https://github.com/geckolinux/geckolinux-project/wiki" class="btn">Documentation</a>
