--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 <li>GeckoLinux prefers packages from the Packman repo when they are available, whereas some of openSUSE's default packages don't work with patent-restricted features even if the features are installed from other sources.</li>
 <li>GeckoLinux comes pre-configured with what many would consider to be good font rendering, whereas many users find openSUSE's default font configuration to be less than desirable.</li>
 <li>GeckoLinux does not force the installation of additional recommended packages after system installation, whereas openSUSE pre-installs patterns and automatically installs recommended package dependencies, thus causing many additional and possibly unwanted packages to be installed the first time the package manager is used.</li>
-<li>GeckoLinux's desktop programs can be uninstalled with all their dependencies, whereas openSUSE's patterns often cause uninstalled packages to be automatically re-installed.</li>
+<li>GeckoLinux pre-installed packages can be uninstalled with all of their dependencies, whereas openSUSE's patterns often cause uninstalled packages to be automatically re-installed.</li>
+<li>GeckoLinux does not use or pre-install PackageKit, which is known to interfere with the underlying Zypper package management system.</li>	
 </ul>
 
 
