--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://user-images.githubusercontent.com/2692138/41168252-0a7369ae-6b0b-11e8-9b60-fa2bbe33622b.png"><img src="https://user-images.githubusercontent.com/2692138/41168252-0a7369ae-6b0b-11e8-9b60-fa2bbe33622b.png" title="GeckoLinux Plasma edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
-    <li><a href="https://user-images.githubusercontent.com/2692138/91384189-8e60d000-e7f3-11ea-936c-d7730380b442.png"><img src="https://user-images.githubusercontent.com/2692138/91384189-8e60d000-e7f3-11ea-936c-d7730380b442.png" title="GeckoLinux Pantheon edition" alt="&nbsp;" width="100%"></a></li>	
     <li><a href="https://user-images.githubusercontent.com/2692138/91662793-47e8cb00-eaaa-11ea-96c2-2b06738d00ed.png"><img src="https://user-images.githubusercontent.com/2692138/91662793-47e8cb00-eaaa-11ea-96c2-2b06738d00ed.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>			
 </ul>
 
@@ -238,8 +237,6 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
-</div>
-<div class="row">
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
@@ -249,6 +246,8 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
         </figcaption>
       </figure>
     </div>
+</div>
+<div class="row">
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
@@ -260,17 +259,6 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     </div>
     <div class="col">
       <figure>
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
-        <figcaption>GeckoLinux <em>Rolling</em> </br> LXQt
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.210526/GeckoLinux_ROLLING_LXQt.x86_64-999.210526.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-</div>
-<div class="row">
-    <div class="col">
-      <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
         <figcaption>GeckoLinux <em>Rolling</em> </br> Budgie
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.210526/GeckoLinux_ROLLING_Budgie.x86_64-999.210526.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
@@ -280,9 +268,9 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     </div>
     <div class="col">
       <figure>
-        <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
-        <figcaption style="font-size: 65%;">GeckoLinux <em>Rolling-OBS</em> </br> Pantheon
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.210526/GeckoLinux_ROLLING-OBS_Pantheon.x86_64-999.210526.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
+        <figcaption>GeckoLinux <em>Rolling</em> </br> LXQt
+		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.210526/GeckoLinux_ROLLING_LXQt.x86_64-999.210526.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
       </figure>
@@ -297,6 +285,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
       </figure>
     </div>
 </div>
+
 
 <h4><a id="download-next" class="anchor" href="#download-next" aria-hidden="true"></a></a>GeckoLinux <em>NEXT</em> editions:</h4>
 <p>
@@ -324,16 +313,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
       </figure>
     </div>
 
-    <div class="col"> 
-      <figure>
-        <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
-        <figcaption>GeckoLinux <em>NEXT</em> Pantheon</br>
-		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/NEXT/GeckoLinux_NEXT_Pantheon.x86_64-152.210223.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
-
-        </figcaption>
-      </figure>
-    </div>
-
+    <div class="col"> &nbsp; </div>
     <div class="col"> &nbsp; </div>
 
 </div>
