--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 
     <div class="col"> &nbsp; </div>
     <div class="col"> &nbsp; </div>
+    <div class="col"> &nbsp; </div>
 
 </div>
 
