--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Cinnamon
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> Cinnamon
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Cinnamon.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
@@ -132,7 +132,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> XFCE
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> XFCE
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_XFCE.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
@@ -141,7 +141,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Gnome
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> Gnome
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Gnome.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
@@ -150,7 +150,7 @@ figcaption {
    <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Plasma
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> Plasma
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Plasma.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
@@ -161,7 +161,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> Mate
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> Mate
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Mate.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
         </figcaption>
       </figure>
@@ -169,7 +169,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
-        <figcaption>GeckoLinux <em>STATIC</em> Budgie
+        <figcaption>GeckoLinux </br> <em>STATIC</em> Budgie
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Budgie.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
@@ -178,7 +178,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> LXQt
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> LXQt
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_LXQt.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
         </figcaption>
       </figure>
@@ -186,7 +186,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
-        <figcaption>GeckoLinux <em>Static</em> </br> "Barebones"
+        <figcaption>GeckoLinux </br> <em>Static</em> </br> "Barebones"
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_BareBones.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
         </figcaption>
       </figure>
@@ -281,7 +281,7 @@ GeckoLinux <em>Rolling</em> editions are based on openSUSE Tumbleweed with its f
     <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91384122-75f0b580-e7f3-11ea-8757-a353efa596e8.png"></a>
-        <figcaption style="font-size: 65%;">GeckoLinux </br> <em>Rolling-OBS</em> </br> Pantheon
+        <figcaption>GeckoLinux </br> <em>Rolling-OBS</em> </br> Pantheon
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Rolling/999.220105/GeckoLinux_ROLLING-OBS_Pantheon.x86_64-999.220105.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
