--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ figcaption {
     <div class="col">
       <figure>
         <img src="https://user-images.githubusercontent.com/2692138/91643419-b1100600-e9f8-11ea-92b1-9a9f885585bb.png"></a>
-        <figcaption>GeckoLinux </br> <em>STATIC</em> Budgie
+        <figcaption>GeckoLinux </br> <em>STATIC</em> </br> Budgie
 		      </br> <a href="https://sourceforge.net/projects/geckolinux/files/Static/153.220104/GeckoLinux_STATIC_Budgie.x86_64-153.220104.0.iso/download"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 
         </figcaption>
