--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ GeckoLinux <em>NEXT</em> editions have a stable openSUSE Leap base, combined wit
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
 
-<p>I've used Linux on the desktop since approximately 2001. I have used many versions of openSUSE since the project's inception, and I used SuSE Linux before that. I've always appreciated openSUSE's flexibility and highly innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that.</p>
+<p>I've used Linux on the desktop since approximately 2001. I have used many versions of openSUSE since the project's inception, and I used SuSE Linux before that. I've always appreciated openSUSE's flexibility and highly innovative infrastructure, but the profusion of "paper cuts" in the default configuration always made me think twice before recommending it to others. This projects sets out to change that. I am also the creator and maintainer of the <a href="http://spirallinux.github.io/">SpiralLinux</a> set of spins built from Debian.</p>
 
 <footer class="site-footer">
   <span class="site-footer-credits">&nbsp;</span>
